playing with blog page

--- a/web/templates/index_blog.html
+++ b/web/templates/index_blog.html
@@ -123,11 +123,13 @@
                 Want to hire some working hours? maybe we can fit in the spare hours, or reserve future hours for your
                 project.
             </p> -->
-            <p> Right now I'm working at Tally, a Web3 company that creates the Best FrontEnd to interact with DAOs: </p>
-            <a href="https://www.tally.xyz/" >
-                <img class="w-10" type="image/svg+xml" src="/public/images/Tally_Logo_Color.svg" alt="tally logo">
-            </a>
-            
+            <div>
+                <p class="w-1/2"> Right now I'm working at Tally, a Web3 company that creates the Best FrontEnd to interact with DAOs: </p>
+                <a href="https://www.tally.xyz/" class="float-right">
+                    <img type="image/svg+xml" src="/public/images/Tally_Logo_Color.svg" alt="tally logo">
+                </a>
+            </div>
+
             <img>
             <style>
                 .service-num {
@@ -144,46 +146,55 @@
             </style>
             <div class="flex flex-col sm:flex-row space-x-6 mx-auto justify-center">
                 <!-- Development -->
-                <div>
-                    <p class="service-num">1</p>
-                    <h3 class="text-lg sm:text-xl md:text-2xl ">
-                        Design Software Architecture
-                    </h3>
-                    <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        Organize a project in a higher level. Creating the blueprint I follow when developing
-                    </p>
+                <a href="ltda">
+                    <div>
+                        <p class="service-num">1</p>
+                        <h3 class="text-lg sm:text-xl md:text-2xl ">
+                            Design Software Architecture
+                        </h3>
+                        <p style="min-width: 180px; max-width: 330px;" class="italic">
+                            Organize a project in a higher level. Creating the blueprint I follow when developing
+                        </p>
+                    </div>
+                </a>
+                <!-- web3 -->
+                <a href="ltda">
 
-                </div>
-                <!-- web3 -->
-                <div>
-                    <p class="service-num">2</p>
-                    <h3 class="text-lg sm:text-xl md:text-2xl ">
-                        Development
-                    </h3>
-                    <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        Literally sit in the chair and programn all day trying to create some cool new features and solve bugs.
-                    </p>
-                </div>
+                    <div>
+                        <p class="service-num">2</p>
+                        <h3 class="text-lg sm:text-xl md:text-2xl ">
+                            Development
+                        </h3>
+                        <p style="min-width: 180px; max-width: 330px;" class="italic">
+                            Literally sit in the chair and programn all day trying to create some cool new features and solve bugs.
+                        </p>
+                    </div>
+                </a>
+
                 <!-- consultoria -->
-                <div>
-                    <p class="service-num">3</p>
-                    <h3 class="text-lg sm:text-xl md:text-2xl ">
-                        Brainstorming
-                    </h3>
-                    <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        Working as a group to brainstorm ideas and create projects. Or even just ideas and then scrap them.
-                    </p>
-                </div>
+                <a href="ltda">
+                    <div>
+                        <p class="service-num">3</p>
+                        <h3 class="text-lg sm:text-xl md:text-2xl ">
+                            Brainstorming
+                        </h3>
+                        <p style="min-width: 180px; max-width: 330px;" class="italic">
+                            Working as a group to brainstorm ideas and create projects. Or even just ideas and then scrap them.
+                        </p>
+                    </div>
+                </a>
                 <!-- web3 -->
-                <div>
-                    <p class="service-num">4</p>
-                    <h3 class="text-lg sm:text-xl md:text-2xl ">
-                        Web3
-                    </h3>
-                    <p style="min-width: 180px; max-width: 330px;" class="italic">
-                        Learn about new Smart Contracts, languages and ways to interact with the blockchain.
-                    </p>
-                </div>
+                <a href="ltda">
+                    <div>
+                        <p class="service-num">4</p>
+                        <h3 class="text-lg sm:text-xl md:text-2xl ">
+                            Web3
+                        </h3>
+                        <p style="min-width: 180px; max-width: 330px;" class="italic">
+                            Learn about new Smart Contracts, languages and ways to interact with the blockchain.
+                        </p>
+                    </div>
+                </a>
 
             </div>
             <div class="relative pt-6 mb-20">
