playing with blog page 2

--- a/web/templates/index_blog.html
+++ b/web/templates/index_blog.html
@@ -125,7 +125,7 @@
             </p> -->
             <div>
                 <p class="w-1/2"> Right now I'm working at Tally, a Web3 company that creates the Best FrontEnd to interact with DAOs: </p>
-                <a href="https://www.tally.xyz/" class="float-right">
+                <a href="https://www.tally.xyz/" class="w-1/2">
                     <img type="image/svg+xml" src="/public/images/Tally_Logo_Color.svg" alt="tally logo">
                 </a>
             </div>
