changes to front page

--- a/web/templates/index_blog.html
+++ b/web/templates/index_blog.html
@@ -119,18 +119,49 @@
         <!-- SERVICES -->
         <section class="my-2 px-12 mt-10 pt-2">
             <h2 class="text-xl sm:text-2xl md:text-4xl  mukta_font mb-4">Code Related</h2>
-            <!-- <p class="italic mt-2 sm:pl-2  sm:ml-8">
-                Want to hire some working hours? maybe we can fit in the spare hours, or reserve future hours for your
-                project.
-            </p> -->
-            <div>
-                <p class="w-1/2"> Right now I'm working at Tally, a Web3 company that creates the Best FrontEnd to interact with DAOs: </p>
-                <a href="https://www.tally.xyz/" class="w-1/2">
-                    <img type="image/svg+xml" src="/public/images/Tally_Logo_Color.svg" alt="tally logo">
+
+            <h3 class="text-lg sm:text-xl"> Projects and Companies I have worked with: </h3>
+
+            <div class="my-16">
+                <a href="https://www.tally.xyz/">
+                    <p class="text-lg w-5/6  lg:ml-32 lg:relative">
+                            <img  class="w-48 lg:w-80 lg:float-right lg:-mb-20 lg:absolute lg:bottom-12 lg:right-12" type="image/svg+xml" src="/public/images/Tally_Logo_Color.svg" alt="tally logo">
+                        Right now I'm working at <strong>Tally!</strong> <br/>  The Web3 company that creates the Best way to vote on <strong>DAOs:</strong>
+                    </p>
+                </a>
+            </div>
+            <div class="my-16">
+                <a href="https://www.codificar.com.br/">
+                    <p class="text-lg w-5/6 lg:mr-10 lg:relative lg:text-right">
+                        <img  class="w-48 lg:w-80 lg:float-left lg:-mb-20 lg:absolute lg:bottom-23 lg:left-12"
+                        type="image/svg+xml" src="/public/images/codificar.svg" alt="codificar logo">
+                        Before that I worked at <strong>Codificar.</strong> <br/>
+                         A company that sells the best <strong>cloned APPs for entreperneurs </strong>  <br/>
+                         who want to enter the market fast!
+                    </p>
+                </a>
+            </div>
+            <div class="my-16">
+                <a href="https://www.get.it/">
+                    <p class="text-lg w-5/6  lg:ml-32 lg:relative">
+                        <img  class="w-48 lg:w-64 lg:float-right lg:-mb-20 lg:absolute lg:bottom-12 lg:right-12" type="image/svg+xml" src="/public/images/getit.svg" alt="getit logo">
+                        I worked too at <strong>Get.It!.</strong> <br/>
+                        A company that handles huge amounts of <strong>jobs listings</strong> and does ETL.
+                    </p>
+                </a>
+            </div>
+            <div class="my-16">
+                <a href="https://comprecriptonopix.com.br/">
+                    <p class="text-lg w-5/6 lg:mr-10 lg:relative lg:text-right">
+                        <img  class="w-32 lg:w-64 lg:float-left lg:-mb-20 lg:absolute lg:bottom-5 lg:left-32"
+                        type="image/svg+xml" src="/public/images/compre.png" alt="compre cripto no pix logo">
+                        I did the MVP for <strong>Compre Cripto no Pix.</strong> <br/>
+                        A simple and easy to use <strong>on-ramper</strong> for Projects on the BNB smart chain<br/>
+                        Done it all using a Brazilian Payment Gateway and Web3 libraries.
+                    </p>
                 </a>
             </div>
 
-            <img>
             <style>
                 .service-num {
                     font-size: 264px;
@@ -197,16 +228,11 @@
                 </a>
 
             </div>
+
             <div class="relative pt-6 mb-20">
-                <!-- <a href="#contact"
+                <a href="#contact"
                     class="absolute right-10 text-black mukta_font text-2xl hover:text-zinc-700 hover:text-3xl">
                     CONTACT ME
-                </a> -->
-                <a class="my-5 flex d-block space-x-3 hover:text-zinc-200 " href="https://github.com/afa7789"
-                target="_blank">
-                    <img class="w-10" type="image/svg+xml" src="/public/images/drawing.svg" alt="site logo">
-                    <h3 class="text-lg mt-1 sm:text-xl md:text-2xl align-middle">Check out my git profile at </h3>
-                    <img class="w-20" type="image/svg+xml" src="/public/images/github_mark.svg" alt="site logo">
                 </a>
             </div>
 
@@ -225,12 +251,12 @@
                 </p>
             </div>
             <div class="ml-4">
-                <!-- <a class="my-5 flex d-block space-x-3 hover:text-zinc-200 " href="https://github.com/afa7789"
+                <a class="my-5 flex d-block space-x-3 hover:text-zinc-200 " href="https://github.com/afa7789"
                 target="_blank">
                     <img class="w-10" type="image/svg+xml" src="/public/images/drawing.svg" alt="site logo">
                     <h3 class="text-lg mt-1 sm:text-xl md:text-2xl align-middle">Check out my git profile at </h3>
                     <img class="w-20" type="image/svg+xml" src="/public/images/github_mark.svg" alt="site logo">
-                </a> -->
+                </a>
                 <a class="flex d-block space-x-3 cursor-pointer  hover:text-zinc-200 "
                     href="https://www.linkedin.com/in/arthur-abeilice/" target="_blank">
                     <h3 class="text-lg mt-1 sm:text-xl md:text-2xl align-middle ">Connect with me at my page in
