nothing useless detail on footer

--- a/web/templates/index_blog.html
+++ b/web/templates/index_blog.html
@@ -6,7 +6,7 @@
     <!-- HEADER -->
     {{ template "components/header.html" . }}
     <main>
-        <section class="pt-3" style='background-image: url("public/images/engravings.png");background-size: cover;'></section>
+        <section class="pt-3" style='position : sticky;top :0;background-image: url("public/images/engravings.png");background-size: cover;'></section>
         <!-- HERO PART -->
         <section class="mt-7 mb-10 px-12">
             <p class="segmented_font text-center px-5 sm:px-16 md:px-20 lg:px-48">
@@ -339,6 +339,7 @@
         </section>
     </main>
     {{ template "components/footer.html" . }}
+    <section class="pt-3" style='background-image: url("public/images/engravings.png");background-size: cover;'></section>
 </body>
 
 </html>
