--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -44,6 +44,7 @@
             #content p{
                 font-size: 0.9rem; 
                 color: #404040;
+                width: 80%;
             }
             #content li{
                 font-size: 0.9rem; 
@@ -66,6 +67,7 @@
                 font-size: 0.8rem; 
                 margin-top: 5px;
                 margin-bottom: 5px;
+                width: 60%;
             }
         </style>
         <div id="content">
