--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -45,6 +45,7 @@
                 font-size: 0.9rem; 
                 color: #404040;
                 width: 80%;
+                margin: 10px 0;
             }
             #content li{
                 font-size: 0.9rem; 
