--- a/web/templates/post.html
+++ b/web/templates/post.html
@@ -46,6 +46,7 @@
                 color: #404040;
                 width: 80%;
                 margin: 10px 0;
+                min-width: 300px
             }
             #content li{
                 font-size: 0.9rem; 
@@ -69,6 +70,7 @@
                 margin-top: 5px;
                 margin-bottom: 5px;
                 width: 60%;
+                min-width: 300px
             }
         </style>
         <div id="content">
