--- a/web/templates/index_blog.html
+++ b/web/templates/index_blog.html
@@ -16,7 +16,7 @@
                 <h5 class="aldo_font -mb-3 ml-3"> afa7789 </h5>
 
                 <h1 class="text-4xl md:text-6xl mukta_font"> 
-                    Techno Wizzard Blog
+                    Computer Techno Wizzard Blog
                 </h1>
 
                 <h2 class="text-lg sm:text-xl md:text-2xl text-right"> an Arthur's website </h2>
