--- a/web/templates/components/footer.html
+++ b/web/templates/components/footer.html
@@ -9,6 +9,12 @@
         <a href="https://github.com/afa7789">
             <h4>Github</h4>
         </a>
+        <a href="https://twitter.com/afa7789">
+            <h4>Twitter</h4>
+        </a>
+        <a href="https://letterboxd.com/afa7789">
+            <h4>Letterboxd</h4>
+        </a>
         <a href="https://open.spotify.com/playlist/1xfwH5ZljgSH40RFkGZkE4">
             <h4>Spotify</h4>
         </a>
