--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -32,8 +32,8 @@
                 </div>
             </div>
         </section>
-
-        <!-- BLOG -->
+        <!-- -->
+        <!-- BLOG 
         <section class="pb-10 pt-4 bg-zinc-900 px-12 text-white">
             <h1 class="mt-3 text-xl sm:text-2xl md:text-4xl mukta_font sm:ml-8">
                 Blog
@@ -68,7 +68,7 @@
                 {{end}}
                 {{else}}
 
-                <!--Card 1-->
+               
                 <div class=" overflow-hidden">
                     <img class="w-full object-fill" src="/public/images/mountain.jpg" alt="Mountain">
                     <div class="px-6 py-4">
@@ -80,7 +80,6 @@
                     </div>
                 </div>
 
-                <!--Card 2-->
                 <div class="rounded-lg overflow-hidden">
                     <img class="w-full object-fill" src="/public/images/river.jpg" alt="River">
                     <div class="px-6 py-4">
@@ -92,7 +91,6 @@
                     </div>
                 </div>
 
-                <!--Card 3-->
                 <div class="rounded-lg overflow-hidden">
                     <img class="w-full object-fill" src="/public/images/forest.jpg" alt="Forest">
                     <div class="px-6 py-4">
@@ -115,6 +113,7 @@
                 </a>
             </div>
         </section>
+    -->
 
         <!-- SERVICES -->
         <section class="my-2 px-12 mt-10 pt-2">
