--- a/web/templates/index_portfolio.html
+++ b/web/templates/index_portfolio.html
@@ -36,11 +36,10 @@
         <!-- BLOG -->
         <section class="pb-10 pt-4 bg-zinc-900 px-12 text-white">
             <h1 class="mt-3 text-xl sm:text-2xl md:text-4xl mukta_font sm:ml-8">
-                Blog
+                Code Samples!
             </h1>
             <p class="italic mt-2 sm:pl-2  sm:ml-8">
-                Posts about technology, programming languages and more, if you want to read more about Arthur or his
-                ideas, check up his
+                Some demos and other code samples I have created. <br> but if you want you can read my 
                 <a class="underline text-blue-600
                 hover:text-zinc-700 
                 visited:text-zinc-400" href="https://afa7789.medium.com/">medium blog posts</a>. <br>
